--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="icon" type="image/svg+xml" href="src/favicon.svg" />
-    <title>Vite App</title>
+    <link rel="icon" type="image/svg+xml" href="src/assets/tudo-logo-1.png" />
+    <title>Meu tudo</title>
 
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;600;700&display=swap" rel="stylesheet">
   </head>
